Solving heading overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -936,7 +936,10 @@ body {
   margin-top: -25vh; }
   @media (max-width: 56.2em) {
     .section-about {
-      padding: 20rem 0; } }
+      padding: 25rem 0; } }
+  @media (max-width: 426px) {
+    .section-about {
+      margin-top: -20vh; } }
 
 .section-features {
   padding: 20rem 0;
