--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,7 +4,11 @@
   margin-top: -25vh;
 
   @include respond(tab-port) {
-    padding: 20rem 0;
+    padding: 25rem 0;
+  }
+
+  @media (max-width: 426px) {
+    margin-top: -20vh;
   }
 }
 
